commit pred pridavanim predlzovania stranky cez ts a sekcie

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
     </div>
     <div id="main">
         <section id="sect1">
+            <div id="lTxtSect1">
+                <p>Dobry, skusam text aj
+                wrapping</p>
+            </div>
 
+            <div id="clickShapeBox">
+                <svg width="100%" height="100%">
+                    <circle id="svgCircle" cx="150" cy="50" r="50" style="fill:orange"/>
+                </svg>
+            </div>
         </section>
 
         <section id="sect2">
