ako tak funkcne dropdown

--- a/index.html
+++ b/index.html
@@ -30,7 +30,67 @@
         </section>
 
         <section id="sect2">
-            HI
+            Bacon ipsum dolor amet flank kevin doner, pig tri-tip beef jowl capicola jerky pastrami swine. Tri-tip ball tip tongue beef leberkas. Brisket bresaola tri-tip sirloin rump. Boudin alcatra pastrami biltong ribeye drumstick chuck hamburger turkey pork t-bone. Meatball short ribs t-bone, tenderloin salami pastrami beef ham. Tail boudin fatback pastrami prosciutto strip steak tri-tip burgdoggen turducken.
+
+            Bacon pig pork turducken beef ribs tongue. Shankle prosciutto ball tip tail swine, t-bone pork loin tongue rump alcatra. Shankle cupim strip steak, chislic picanha drumstick pork belly tongue swine kevin shank ball tip meatloaf pastrami porchetta. Turducken buffalo leberkas tongue shank pastrami pork chop. Ham hock tenderloin spare ribs, burgdoggen tri-tip chislic porchetta ham turkey ribeye tongue ground round kevin chicken flank.
+
+            Ribeye pig beef shankle tongue meatball porchetta ground round. Venison brisket pig sausage kielbasa, pancetta leberkas. Ball tip short ribs brisket chuck tenderloin ground round burgdoggen ham hock kevin flank doner kielbasa. Kielbasa pork chop leberkas short ribs pork tail salami.
+
+            Cupim tenderloin leberkas, turkey short ribs t-bone alcatra. Swine meatball leberkas beef tongue chislic chuck kevin cow drumstick pork chop corned beef t-bone buffalo. Boudin pork chop prosciutto corned beef pork rump landjaeger doner. Frankfurter capicola sausage, rump ham hock kielbasa strip steak pork jerky biltong andouille t-bone. Shankle biltong rump bresaola jerky, turkey pork belly filet mignon meatloaf pastrami picanha ball tip cow.
+
+            Picanha flank 
+            
+            Bacon ipsum dolor amet flank kevin doner, pig tri-tip beef jowl capicola jerky pastrami swine. Tri-tip ball tip tongue beef leberkas. Brisket bresaola tri-tip sirloin rump. Boudin alcatra pastrami biltong ribeye drumstick chuck hamburger turkey pork t-bone. Meatball short ribs t-bone, tenderloin salami pastrami beef ham. Tail boudin fatback pastrami prosciutto strip steak tri-tip burgdoggen turducken.
+
+Bacon pig pork turducken beef ribs tongue. Shankle prosciutto ball tip tail swine, t-bone pork loin tongue rump alcatra. Shankle cupim strip steak, chislic picanha drumstick pork belly tongue swine kevin shank ball tip meatloaf pastrami porchetta. Turducken buffalo leberkas tongue shank pastrami pork chop. Ham hock tenderloin spare ribs, burgdoggen tri-tip chislic porchetta ham turkey ribeye tongue ground round kevin chicken flank.
+
+Ribeye pig beef shankle tongue meatball porchetta ground round. Venison brisket pig sausage kielbasa, pancetta leberkas. Ball tip short ribs brisket chuck tenderloin ground round burgdoggen ham hock kevin flank doner kielbasa. Kielbasa pork chop leberkas short ribs pork tail salami.
+
+Cupim tenderloin leberkas, turkey short ribs t-bone alcatra. Swine meatball leberkas beef tongue chislic chuck kevin cow drumstick pork chop corned beef t-bone buffalo. Boudin pork chop prosciutto corned beef pork rump landjaeger doner. Frankfurter capicola sausage, rump ham hock kielbasa strip steak pork jerky biltong andouille t-bone. Shankle biltong rump bresaola jerky, turkey pork belly filet mignon meatloaf pastrami picanha ball tip cow.
+
+Picanha flank pork loin fatback pork chop kielbasa. Shoulder strip steak buffalo, kevin andouille shank venison fatback. Landjaeger veni
+
+Bacon ipsum dolor amet flank kevin doner, pig tri-tip beef jowl capicola jerky pastrami swine. Tri-tip ball tip tongue beef leberkas. Brisket bresaola tri-tip sirloin rump. Boudin alcatra pastrami biltong ribeye drumstick chuck hamburger turkey pork t-bone. Meatball short ribs t-bone, tenderloin salami pastrami beef ham. Tail boudin fatback pastrami prosciutto strip steak tri-tip burgdoggen turducken.
+
+Bacon pig pork turducken beef ribs tongue. Shankle prosciutto ball tip tail swine, t-bone pork loin tongue rump alcatra. Shankle cupim strip steak, chislic picanha drumstick pork belly tongue swine kevin shank ball tip meatloaf pastrami porchetta. Turducken buffalo leberkas tongue shank pastrami pork chop. Ham hock tenderloin spare ribs, burgdoggen tri-tip chislic porchetta ham turkey ribeye tongue ground round kevin chicken flank.
+
+Ribeye pig beef shankle tongue meatball porchetta ground round. Venison brisket pig sausage kielbasa, pancetta leberkas. Ball tip short ribs brisket chuck tenderloin ground round burgdoggen ham hock kevin flank doner kielbasa. Kielbasa pork chop leberkas short ribs pork tail salami.
+
+Cupim tenderloin leberkas, turkey short ribs t-bone alcatra. Swine meatball leberkas beef tongue chislic chuck kevin cow drumstick pork chop corned beef t-bone buffalo. Boudin pork chop prosciutto corned beef pork rump landjaeger doner. Frankfurter capicola sausage, rump ham hock kielbasa strip steak pork jerky biltong andouille t-bone. Shankle biltong rump bresaola jerky, turkey pork belly filet mignon meatloaf pastrami picanha ball tip cow.
+
+Picanha flank pork loin fatback pork chop kielbasa. Shoulder strip steak buffalo, kevin andouille shank venison fatback. LandjaegBacon ipsum dolor amet flank kevin doner, pig tri-tip beef jowl capicola jerky pastrami swine. Tri-tip ball tip tongue beef leberkas. Brisket bresaola tri-tip sirloin rump. Boudin alcatra pastrami biltong ribeye drumstick chuck hamburger turkey pork t-bone. Meatball short ribs t-bone, tenderloin salami pastrami beef ham. Tail boudin fatback pastrami prosciutto strip steak tri-tip burgdoggen turducken.
+
+Bacon pig pork turducken beef ribs tongue. Shankle prosciutto ball tip tail swine, t-bone pork loin tongue rump alcatra. Shankle cupim strip steak, chislic picanha drumstick pork belly tongue swine kevin shank ball tip meatloaf pastrami porchetta. Turducken buffalo leberkas tongue shank pastrami pork chop. Ham hock tenderloin spare ribs, burgdoggen tri-tip chislic porchetta ham turkey ribeye tongue ground round kevin chicken flank.
+
+Ribeye pig beef shankle tongue meatball porchetta ground round. Venison brisket pig sausage kielbasa, pancetta leberkas. Ball tip short ribs brisket chuck tenderloin ground round burgdoggen ham hock kevin flank doner kielbasa. Kielbasa pork chop leberkas short ribs pork tail salami.
+
+Cupim tenderloin leberkas, turkey short ribs t-bone alcatra. Swine meatball leberkas beef tongue chislic chuck kevin cow drumstick pork chop corned beef t-bone buffalo. Boudin pork chop prosciutto corned beef pork rump landjaeger doner. Frankfurter capicola sausage, rump ham hock kielbasa strip steak pork jerky biltong andouille t-bone. Shankle biltong rump bresaola jerky, turkey pork belly filet mignon meatloaf pastrami picanha ball tip cow.
+
+Picanha flank pork loin fatback pork chop kielbasa. Shoulder strip steak buffalo, kevin andouille shank venison fatback. Landjaeger venison shank ribeye tri-tip beef. Pork chop strip steak chislic, bresaola shankle shank cow tail kielbasa corned beef ball tip.Bacon ipsum dolor amet flank kevin doner, pig tri-tip beef jowl capicola jerky pastrami swine. Tri-tip ball tip tongue beef leberkas. Brisket bresaola tri-tip sirloin rump. Boudin alcatra pastrami biltong ribeye drumstick chuck hamburger turkey pork t-bone. Meatball short ribs t-bone, tenderloin salami pastrami beef ham. Tail boudin fatback pastrami prosciutto strip steak tri-tip burgdoggen turducken.
+
+Bacon pig pork turducken beef ribs tongue. Shankle prosciutto ball tip tail swine, t-bone pork loin tongue rump alcatra. Shankle cupim strip steak, chislic picanha drumstick pork belly tongue swine kevin shank ball tip meatloaf pastrami porchetta. Turducken buffalo leberkas tongue shank pastrami pork chop. Ham hock tenderloin spare ribs, burgdoggen tri-tip chislic porchetta ham turkey ribeye tongue ground round kevin chicken flank.
+
+Ribeye pig beef shankle tongue meatball porchetta ground round. Venison brisket pig sausage kielbasa, pancetta leberkas. Ball tip short ribs brisket chuck tenderloin ground round burgdoggen ham hock kevin flank doner kielbasa. Kielbasa pork chop leberkas short ribs pork tail salami.
+
+Cupim tenderloin leberkas, turkey short ribs t-bone alcatra. Swine meatball leberkas beef tongue chislic chuck kevin cow drumstick pork chop corned beef t-bone buffalo. Boudin pork chop prosciutto corned beef pork rump landjaeger doner. Frankfurter capicola sausage, rump ham hock kielbasa strip steak pork jerky biltong andouille t-bone. Shankle biltong rump bresaola jerky, turkey pork belly filet mignon meatloaf pastrami picanha ball tip cow.
+
+Picanha flank pork loin fatback pork chop kielbasa. Shoulder strip steak buffalo, kevin andouille shank venison fatback. Landjaeger venison shank ribeye tri-tip beef. Pork chop strip steak chislic, bresaola shankle shank cow tail kielbasa corned beef ball tip.Bacon ipsum dolor amet flank kevin doner, pig tri-tip beef jowl capicola jerky pastrami swine. Tri-tip ball tip tongue beef leberkas. Brisket bresaola tri-tip sirloin rump. Boudin alcatra pastrami biltong ribeye drumstick chuck hamburger turkey pork t-bone. Meatball short ribs t-bone, tenderloin salami pastrami beef ham. Tail boudin fatback pastrami prosciutto strip steak tri-tip burgdoggen turducken.
+
+Bacon pig pork turducken beef ribs tongue. Shankle prosciutto ball tip tail swine, t-bone pork loin tongue rump alcatra. Shankle cupim strip steak, chislic picanha drumstick pork belly tongue swine kevin shank ball tip meatloaf pastrami porchetta. Turducken buffalo leberkas tongue shank pastrami pork chop. Ham hock tenderloin spare ribs, burgdoggen tri-tip chislic porchetta ham turkey ribeye tongue ground round kevin chicken flank.
+
+Ribeye pig beef shankle tongue meatball porchetta ground round. Venison brisket pig sausage kielbasa, pancetta leberkas. Ball tip short ribs brisket chuck tenderloin ground round burgdoggen ham hock kevin flank doner kielbasa. Kielbasa pork chop leberkas short ribs pork tail salami.
+
+Cupim tenderloin leberkas, turkey short ribs t-bone alcatra. Swine meatball leberkas beef tongue chislic chuck kevin cow drumstick pork chop corned beef t-bone buffalo. Boudin pork chop prosciutto corned beef pork rump landjaeger doner. Frankfurter capicola sausage, rump ham hock kielbasa strip steak pork jerky biltong andouille t-bone. Shankle biltong rump bresaola jerky, turkey pork belly filet mignon meatloaf pastrami picanha ball tip cow.
+
+Picanha flank pork loin fatback pork chop kielbasa. Shoulder strip steak buffalo, kevin andouille shank venison fatback. Landjaeger venison shank ribeye tri-tip beef. Pork chop strip steak chislic, bresaola shankle shank cow tail kielbasa corned beef ball tip.Bacon ipsum dolor amet flank kevin doner, pig tri-tip beef jowl capicola jerky pastrami swine. Tri-tip ball tip tongue beef leberkas. Brisket bresaola tri-tip sirloin rump. Boudin alcatra pastrami biltong ribeye drumstick chuck hamburger turkey pork t-bone. Meatball short ribs t-bone, tenderloin salami pastrami beef ham. Tail boudin fatback pastrami prosciutto strip steak tri-tip burgdoggen turducken.
+
+Bacon pig pork turducken beef ribs tongue. Shankle prosciutto ball tip tail swine, t-bone pork loin tongue rump alcatra. Shankle cupim strip steak, chislic picanha drumstick pork belly tongue swine kevin shank ball tip meatloaf pastrami porchetta. Turducken buffalo leberkas tongue shank pastrami pork chop. Ham hock tenderloin spare ribs, burgdoggen tri-tip chislic porchetta ham turkey ribeye tongue ground round kevin chicken flank.
+
+Ribeye pig beef shankle tongue meatball porchetta ground round. Venison brisket pig sausage kielbasa, pancetta leberkas. Ball tip short ribs brisket chuck tenderloin ground round burgdoggen ham hock kevin flank doner kielbasa. Kielbasa pork chop leberkas short ribs pork tail salami.
+
+Cupim tenderloin leberkas, turkey short ribs t-bone alcatra. Swine meatball leberkas beef tongue chislic chuck kevin cow drumstick pork chop corned beef t-bone buffalo. Boudin pork chop prosciutto corned beef pork rump landjaeger doner. Frankfurter capicola sausage, rump ham hock kielbasa strip steak pork jerky biltong andouille t-bone. Shankle biltong rump bresaola jerky, turkey pork belly filet mignon meatloaf pastrami picanha ball tip cow.
+
+Picanha flank pork loin fatback pork chop kielbasa. Shoulder strip steak buffalo, kevin andouille shank venison fatback. Landjaeger venison shank ribeye tri-tip beef. Pork chop strip steak chislic, bresaola shankle shank cow tail kielbasa corned beef ball tip.er venison shank ribeye tri-tip beef. Pork chop strip steak chislic, bresaola shankle shank cow tail kielbasa corned beef ball tip.son shank ribeye tri-tip beef. Pork chop strip steak chislic, bresaola shankle shank cow tail kielbasa corned beef ball tip.pork loin fatback pork chop kielbasa. Shoulder strip steak buffalo, kevin andouille shank venison fatback. Landjaeger venison shank ribeye tri-tip beef. Pork chop strip steak chislic, bresaola shankle shank cow tail kielbasa corned beef ball tip.
         </section>
 
     </div>
