--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
 <body>
     <div id="header">
         <svg id="svgBox" width="100%" height="100%">
-            <polygon points="0,0 1920,0 1920,150" style="fill:#001845;stroke:black;stroke-width:3" />
-            <text x="1800" y="80" style="fill:white"> Sample Text</text>
-            <text x="30" y="105" style="fill:white;font-family:Arial, Helvetica, sans-serif;font-size:62px"> Large Text Sample</text>
+            <polygon points="0,0 1920,0 1920,150" style="fill:#00b300;stroke:black;stroke-width:3" />
+            <text x="30" y="105" style="fill:#00b300;font-family:Arial, Helvetica, sans-serif;font-size:62px"> Git | Contacts</text>
         </svg>     
     </div>
     <div id="main">
         <section id="sect1">
             <div id="lTxtSect1">
-                <p>Dobry, skusam text aj
-                wrapping</p>
+                <p>SHIMON</p>
             </div>
 
             <div id="clickShapeBox">
                 <svg width="100%" height="100%">
-                    <circle id="svgCircle" cx="150" cy="50" r="50" style="fill:orange"/>
+                    <circle id="svgCircle" cx="150" cy="50" r="50" style="fill:#00b300"/>
                 </svg>
             </div>
         </section>
