niekam sa dostavam, pozri inf zosit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="main">
         <section id="sect1">
             <div id="lTxtSect1">
-                <p>SHIMON</p>
+                <p>SHIMON/Home </p> <p class="blinking">|</p>
             </div>
 
             <div id="clickShapeBox">
