--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
 </head>
 <body>
     <div id="header">
-        <svg id="svgBox" width="100%" height="100%">
+        <div id="lTxtNav"><strong>Lorem Ipsum</strong></div>   
+
+        <div id="navBarMid">
+            <div id="navBarMidTxtWrapper">
+                <div class="navTextMid">about</div>
+                <div class="navTextMid">github</div>
+                <div class="navTextMid">contact</div>                
+            </div>
+        </div>
+
+        <div id="rTxtNav">
+            <div><strong>Lorem Ipsum</strong></div>
+
+        </div>
+    <!-- <svg id="svgBox" width="100%" height="100%">
             <polygon points="0,0 1920,0 1920,150" style="fill:#00b300;stroke:black;stroke-width:3" />
             <text x="30" y="105" style="fill:#00b300;font-family:Arial, Helvetica, sans-serif;font-size:62px"> Git | Contacts</text>
-        </svg>     
+        </svg>
+    -->     
+
     </div>
     <div id="main">
         <section id="sect1">
