--- a/index.html
+++ b/index.html
@@ -37,9 +37,21 @@
             </div>
 
             <div id="clickShapeBox">
-                <svg width="100%" height="100%">
-                    <circle id="svgCircle" cx="150" cy="50" r="50" style="fill:#00b300"/>
-                </svg>
+                <svg id="arrow"width="100%" height="100%">
+                    <path id="arrowPath"
+                      stroke="#00b300"
+                      stroke-linecap="round"
+                      stroke-width="3"
+                      d="
+                      M 100 50
+                      L 150 100
+                      L 200 50 
+                      
+                      
+                      "
+                    >
+                    </path>
+                  </svg>
             </div>
         </section>
 
