--- a/index.html
+++ b/index.html
@@ -32,10 +32,17 @@
     </div>
     <div id="main">
         <section id="sect1">
-
-            <div id="lTxtSect1">
-                <p>SHIMON/Home </p> <p class="blinking">|</p>
+            <div id="mainTxtBox">
+                <div id="lTxtSect1">
+                    <p>SHIMON/Home </p> <p class="blinking">|</p>
+                </div>
+                <div id="dscTxtSect1">
+                    <p id="dscTxt"> Lorem Ipsum, sample text</p>
+                </div>                
             </div>
+
+
+
 
             <div id="clickShapeBox">
                 <svg id="arrow"width="100%" height="100%">
@@ -91,7 +98,7 @@
                 </div>
             </div>         
             <div id="sect2col3">
-                <div class="showImSct1">
+                <div class="showImgSct1">
 
                 </div>
                 <div class="showTxt">
