cleanup, stranka funguje lepsie na malej sirke viewport

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="sect1">
             <div id="mainTxtBox">
                 <div id="lTxtSect1">
-                    <p>SHIMON/Home </p> <p class="blinking">|</p>
+                    <p>Longer Text, Sample text, Text. </p> <!-- <p class="blinking">|</p> -->
                 </div>
                 <div id="dscTxtSect1">
                     <p id="dscTxt"> Lorem Ipsum, sample text</p>
@@ -76,8 +76,8 @@
         </section>
 
         <section id="sect2">
-            <div id="sect2col1">
-                <div class="showImgSct1">
+            <div class="sect2colL">
+                <div class="showImgSct2">
 
                 </div>
                 <div class="showTxt">
@@ -87,8 +87,8 @@
                 </div>
             </div>
 
-            <div id="sect2col2">
-                <div class="showImgSct1">
+            <div class="sect2colR">
+                <div class="showImgSct2">
 
                 </div>
                 <div class="showTxt">
@@ -97,8 +97,8 @@
                     </p>
                 </div>
             </div>         
-            <div id="sect2col3">
-                <div class="showImgSct1">
+            <div class="sect2colL">
+                <div class="showImgSct2">
 
                 </div>
                 <div class="showTxt">
@@ -110,8 +110,8 @@
         </section>
 
         <section id="sect3">
-            <div id="sect3col1">
-                <div class="showImgSct2">
+            <div class="sect3colL">
+                <div class="showImgSct3">
 
                 </div>
                 <div class="showTxt">
@@ -121,8 +121,8 @@
                 </div>
             </div>
 
-            <div id="sect3col2">
-                <div class="showImgSct2">
+            <div class="sect3colR">
+                <div class="showImgSct3">
 
                 </div>
                 <div class="showTxt">
@@ -131,8 +131,8 @@
                     </p>
                 </div>
             </div>         
-            <div id="sect3col3">
-                <div class="showImgSct2">
+            <div class="sect3colL">
+                <div class="showImgSct3">
 
                 </div>
                 <div class="showTxt">
