zlepsenie animaci a fungovania na mensej vw

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
-    <title>Document</title>
+    <title>Cool title</title>
 </head>
 <body>
     <div id="header">
@@ -51,9 +51,9 @@
                       stroke-linecap="round"
                       stroke-width="3"
                       d="
-                      M 100 50
-                      L 150 100
-                      L 200 50 
+                      M 1 50
+                      L 50 99
+                      L 99 50 
                       "
                     >
                     </path>
@@ -65,9 +65,9 @@
                       stroke-linecap="round"
                       stroke-width="3"
                       d="
-                      M 100 50
-                      L 150 100
-                      L 200 50 
+                      M 1 50
+                      L 50 99
+                      L 99 50 
                       "
                     >
                     </path>
